# uwu

./: README.md  pyproject.toml
examples/: control_flow.py  even_safer_rpn.py  hewwo.py  horrific_control_flow_dear_god_what_am_i_doing.py  very_safe_rpn.py
uwu/: magic.py  stack.py
